Fix the rendering of long lines in code blocks
This adds an horizontal scrollbar on the codeblock instead of making
lines overflow.

--- a/docs/_sass/_leafo.scss
+++ b/docs/_sass/_leafo.scss
@@ -268,5 +268,6 @@ p {
         border: 1px solid #222;
         padding: 10px;
         margin: 0 0 15px;
+        overflow-x: auto;
     }
 }
